--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="BPJSTKU"
+        android:text="BPJSTKUY"
         android:textColor="@color/colorPrimary"
         android:textSize="48dp"
         android:textStyle="bold"
