--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#00AED8</color>
+    <color name="colorAccent">#D6DE52</color>
     <color name="BPJSTKGreen">#25B45A</color>
     <color name="BPJSTKYellow">#D6DE52</color>
     <color name="BPJSTKBlue">#00AED8</color>
+    <color name="white">#FFFFFF</color>
     <color name="softBlack">#313131</color>
 </resources>
