--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -12,6 +12,7 @@
         android:id="@+id/linearLayoutDisplayProfile"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayoutSlider"
         app:layout_constraintEnd_toEndOf="parent"
