--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -14,6 +14,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:orientation="horizontal"
+        android:background="@color/BPJSTKGreen"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayoutSlider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,12 +33,13 @@
     <RelativeLayout
         android:id="@+id/relativeLayoutSlider"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="165dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/BPJSTKYellow"
         app:layout_constraintBottom_toTopOf="@+id/linearLayoutJHTMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +99,7 @@
             android:paddingRight="5.5dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            android:src="@drawable/dashboard1" />
+            android:src="@drawable/dashboard01" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -107,7 +109,7 @@
             android:paddingLeft="2.5dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            android:src="@drawable/dashboard2" />
+            android:src="@drawable/dashboard02" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -116,7 +118,7 @@
             android:paddingLeft="5.5dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            android:src="@drawable/dashboard3" />
+            android:src="@drawable/dashboard03" />
 
     </LinearLayout>
 
